# humble-cli

./: .gitignore  AGENTS.md  Cargo.toml  DEVELOPMENT.md  IMPLEMENTATION_COMPLETE.md  LICENSE  MIGRATION_SUMMARY.md  Makefile  README.md  go.mod  go.sum
.github/: dependabot.yml  stale.yml  tests.yml
.github/workflows/: automerge.yml  latest-deps.yml  publish.yml  release.yml  stale.yml  tests.yml  vulncheck.yml
cmd/humble-cli/: main.go
docs/: session-key-chrome.md  session-key-firefox.md  session-key-safari.md
humble-cli-go/: .gitignore  CHANGELOG.md  MIGRATION.md  QUICK_REFERENCE.md  README.md  go.mod  go.sum
humble-cli-go/internal/commands/: commands.go
humble-cli-go/internal/keymatch/: keymatch.go  keymatch_test.go
humble-cli-go/internal/models/: bundle.go  choice.go
humble-cli-go/internal/util/: bytes.go  filename.go  filename_test.go
internal/api/: errors.go  errors_test.go  humble.go  humble_test.go
internal/commands/: commands.go
internal/config/: config.go  config_test.go
internal/download/: download.go
internal/models/: bundle_test.go  choice_test.go  enums.go  enums_test.go
internal/testutil/: fixtures.go  testutil.go
internal/util/: bytes.go  bytes_test.go  ranges.go  ranges_test.go  table.go
src/: config.rs  download.rs  humble_api.rs  key_match.rs  lib.rs  main.rs  models.rs  util.rs
tests/: cli.rs  models.rs
