[package]
name = "humble-cli"
authors = ["Mohammad Banisaeid <smbl64@gmail.com>"]
version = "0.16.1"
license = "MIT"
description = "The missing CLI for downloading your Humble Bundle purchases"
documentation = "https://github.com/smbl64/humble-cli"
repository = "https://github.com/smbl64/humble-cli"
readme = "README.md"
categories = ["command-line-utilities"]
edition = "2021"
exclude = [
    "docs",
    ".github",
]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "humble-cli"

[dependencies]
anyhow = "1.0"
byte-unit = { version = "4.0", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.1", features = ["cargo", "derive"] }
clap_complete = "3.2"
dirs = "5.0.1"
futures-util = "0.3"
indicatif = "0.17"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls", "stream"], default-features = false }
scraper = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.9"
tabled = "0.14"
thiserror = "1.0"
tokio = { version = "1.18", features = ["full"] }

[dev-dependencies]
assert_cmd = "2"
